--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "fritzvd.github.io",
   "version": "1.0.0",
-  "description": "README ===== This 'll be my homepage. SSG with nanoc",
+  "description": "README ===== This 'll be my homepage. SSG with webpack",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server --progress --colors --hot --inline --port 3002 --host 127.0.0.1",
+    "build": "webpack -p -progress --colors"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,24 @@
   },
   "homepage": "https://github.com/fritzvd/fritzvd.github.io#readme",
   "devDependencies": {
-    "webpack": "^1.12.14"
+    "babel": "^6.5.2",
+    "babel-core": "^6.7.6",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "css-loader": "^0.23.1",
+    "file-loader": "^0.8.5",
+    "jsx-loader": "^0.13.2",
+    "node-sass": "^3.4.2",
+    "sass-loader": "^3.2.0",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.12.14",
+    "webpack-dev-server": "^1.14.1"
+  },
+  "dependencies": {
+    "react": "^15.0.1",
+    "react-dom": "^15.0.1",
+    "skeleton-scss": "git+https://github.com/whatsnewsaes/Skeleton-Sass.git"
   }
 }
