--- a/package.json
+++ b/package.json
@@ -18,25 +18,26 @@
   },
   "homepage": "https://github.com/fritzvd/fritzvd.github.io#readme",
   "devDependencies": {
-    "babel": "^6.5.2",
-    "babel-core": "^6.7.6",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
+    "brfs": "^1.4.3",
+    "browserify-versionify": "^1.0.6",
     "css-loader": "^0.23.1",
     "file-loader": "^0.8.5",
-    "jsx-loader": "^0.13.2",
-    "node-sass": "^3.4.2",
-    "sass-loader": "^3.2.0",
+    "glslify": "^5.1.0",
+    "glslify-loader": "^1.0.2",
+    "ify-loader": "^1.0.3",
+    "json-loader": "^0.5.4",
+    "node-sass": "^3.8.0",
+    "raw-loader": "^0.5.1",
+    "sass-loader": "^3.2.3",
     "style-loader": "^0.13.1",
+    "transform-loader": "^0.2.3",
     "url-loader": "^0.5.7",
-    "webpack": "^1.12.14",
+    "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
-    "phaser": "^2.4.6",
-    "react": "^15.0.1",
-    "react-dom": "^15.0.1",
+    "matter-js": "^0.10.0",
+    "pixi.js": "^4.0.0-rc3",
     "skeleton-scss": "git+https://github.com/whatsnewsaes/Skeleton-Sass.git"
   }
 }
