add some more projects, change colors and speed

--- a/package.json
+++ b/package.json
@@ -19,27 +19,27 @@
   },
   "homepage": "https://github.com/fritzvd/fritzvd.github.io#readme",
   "devDependencies": {
-    "brfs": "^1.4.3",
-    "browserify-versionify": "^1.0.6",
-    "css-loader": "^0.23.1",
-    "file-loader": "^0.8.5",
-    "glslify": "^5.1.0",
-    "glslify-loader": "^1.0.2",
-    "ify-loader": "^1.0.3",
-    "json-loader": "^0.5.4",
-    "node-sass": "^3.13.1",
-    "raw-loader": "^0.5.1",
-    "sass-loader": "^3.2.3",
-    "style-loader": "^0.13.1",
-    "tape": "^4.6.0",
-    "transform-loader": "^0.2.3",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
+    "brfs": "",
+    "browserify-versionify": "",
+    "css-loader": "",
+    "file-loader": "",
+    "glslify": "",
+    "glslify-loader": "",
+    "ify-loader": "",
+    "json-loader": "",
+    "node-sass": "",
+    "raw-loader": "",
+    "sass-loader": "",
+    "style-loader": "",
+    "tape": "",
+    "transform-loader": "",
+    "url-loader": "",
+    "webpack": "",
+    "webpack-dev-server": ""
   },
   "dependencies": {
-    "matter-js": "^0.10.0",
-    "pixi.js": "^4.6.0",
+    "matter-js": "",
+    "pixi.js": "",
     "skeleton-scss": "git+https://github.com/whatsnewsaes/Skeleton-Sass.git"
   }
 }
